force-app/main/default/objects/ysign__Yousign_Contact_Fields__mdt/ysign__Yousign_Contact_Fields__mdt.object-meta.xml
<CustomObject>
    <label>Yousign Contact Fields</label>
    <pluralLabel>Yousign Contacts Fields</pluralLabel>
</CustomObject>