force-app/main/default/objects/ysign__Yousign_Contact_Fields__mdt/fields/ysign__Contact_Object__c.field-meta.xml
<CustomField>
    <fullName>ysign__Contact_Object__c</fullName>
    <label>Contact Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Yousign_Contacts_Fields</relationshipLabel>
    <relationshipName>Yousign_Contacts_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>