force-app/main/default/objects/ysign__Yousign_Contact_Fields__mdt/fields/ysign__Email_field__c.field-meta.xml
<CustomField>
    <fullName>ysign__Email_field__c</fullName>
    <label>Email field</label>
    <metadataRelationshipControllingField>ysign__Yousign_Contact_Fields__mdt.ysign__Contact_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Yousign_Contacts_Fields3</relationshipLabel>
    <relationshipName>Yousign_Contacts_Fields3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>