force-app/main/default/objects/ysign__Yousign_Contact_Fields__mdt/fields/ysign__FirstName_Field__c.field-meta.xml
<CustomField>
    <fullName>ysign__FirstName_Field__c</fullName>
    <label>FirstName Field</label>
    <metadataRelationshipControllingField>ysign__Yousign_Contact_Fields__mdt.ysign__Contact_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Yousign_Contacts_Fields1</relationshipLabel>
    <relationshipName>Yousign_Contacts_Fields1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>